[tool.poetry]
name = "nexus-hello"
version = "0.0.0"
description = "Sample project demonstrating Nexus framework usage and features"
authors = ["ECCO Data & AI <esdsupport@ecco.com>"]
maintainers = ["ECCO Data & AI <esdsupport@ecco.com>"]
readme = "README.md"
license = 'Apache 2.0'
repository = 'https://github.com/SneaksAndData/nexus-hello'

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
adapta = { version = "^3.4", extras = ["storage", "aws", "datadog"] }
nexus-client-sdk = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pylint = "^3"
pytest-mock = "^3.6.1"
pytest-cov = "^3"
locust = "^2.14.2"
black = "^23"
pytest-timeout = "^2.1.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
